--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "Hong Kong"
-title                    : "Luyao YE / Site Title"
+title                    : "Luyao YE / Academic Profile"
 title_separator          : "-"
 name                     : &name "Luyao YE"
 description              : &description "personal description"
